<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="275dp"
    android:layout_height="190dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/add_contact_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_size"
        android:layout_marginHorizontal="@dimen/margin_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="@dimen/field_size"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="@string/name" />

    <EditText
        android:id="@+id/add_contact_number"
        app:layout_constraintTop_toBottomOf="@id/add_contact_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:textSize="@dimen/field_size"
        android:ems="10"
        android:inputType="phone"
        android:autofillHints="@string/phone_number" />

    <Button
        android:id="@+id/add_contact_save_btn"
        app:layout_constraintTop_toBottomOf="@id/add_contact_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

</androidx.constraintlayout.widget.ConstraintLayout>