<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sign_up_layout"
    tools:context=".ui.activity.SignUpActivity">

    <LinearLayout
        android:elevation="2dp"
        android:id="@+id/progress_bar_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="gone"
        android:focusable="true"
        android:gravity="center">

        <ProgressBar
            tools:ignore="MissingConstraints"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/sign_up_title_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:text="@string/app_name"/>

    <EditText
        android:id="@+id/sign_up_phone_no"
        app:layout_constraintTop_toBottomOf="@id/sign_up_title_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/field_size"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sign_up_phone_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textSize="@dimen/field_size"
        android:hint="@string/sign_up"
        android:onClick="onSignUp"/>

</androidx.constraintlayout.widget.ConstraintLayout>